<resources>
    <string name="app_name">Corrector Examenes Mobile</string>
    <string name="descriptionImageLogo">Logo Universae</string>
    <string name="descriptionImagePlantilla">Plantilla vacía Universae</string>
    <string name="plantillaString">Añadir plantilla</string>
    <string name="examenString">Añadir examen</string>
    <string name="corregirString">Corregir examen</string>
    <string name="galeriaString">Galeria</string>
    <string name="camaraString">Camara</string>
    <String name="testImagen">Imagen procesada</String>
</resources>