<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/universaeColor"
    android:layout_weight="1"
    android:layout_gravity="start"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="0.5"
            android:contentDescription="@string/descriptionImageLogo"
            android:src="@drawable/logo"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/tittle"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="0.1"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/descriptionImagePlantilla"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:src="@drawable/plantilla" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        tools:ignore="InefficientWeight"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_background_selector"
            android:fontFamily="@font/raleway_extrabold"
            android:text="@string/plantillaString"
            android:textColor="@drawable/text_color"
            android:layout_gravity="center">

        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_background_selector"
            android:fontFamily="@font/raleway_extrabold"
            android:text="@string/examenString"
            android:textColor="@drawable/text_color"
            android:layout_gravity="center">

        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_background_selector"
            android:fontFamily="@font/raleway_extrabold"
            android:text="@string/corregirString"
            android:textColor="@drawable/text_color"
            android:layout_gravity="center">

        </Button>
    </LinearLayout>

</LinearLayout>